# zero2prod

./: Cargo.toml  Dockerfile  config.yaml  init-db.sh
migrations/: 20240513020314_create_subscriptions_tables.sql
scripts/: init-db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
