[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
config = "0.11"
chrono = "0.4.15"
env_logger = "0.9"
[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4"
]